<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".Activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/awin_logo" />

            <EditText
                android:id="@+id/file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/upload_file"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:hint="@string/firstname"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:hint="@string/lastname"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <EditText
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:hint="@string/jobTitle"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <EditText
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:hint="@string/source"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/hint" />

            <Button
                android:id="@+id/upload"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/design_default_color_primary"
            android:indeterminateTintMode="src_atop" />

    </RelativeLayout>

</RelativeLayout>
